tests/errors/prelude-macro-nonprelude-matches.ari
mod other {
}

fn main() -> i64 {
  other::matches!(1, 1);
  return 0;
}
